--- a/blog/blog.css
+++ b/blog/blog.css
@@ -1,10 +1,36 @@
+body {
+    font-family: Livvic;
+    color: rgb(17, 17, 17);
+}
+
 #original_fancyindex {
     display: none;
 }
 
-#header {
+#header, #header {
     margin: 0 auto;
     text-align: center;
+}
+
+#header table, #footer table {
+    width: 100%;
+}
+
+#header hr, #footer hr {
+    background: #ccc;
+    height: 1px;
+    border: 0;
+    max-width: 1230px;
+    margin: 4em auto;
+    text-align: center;
+}
+
+#header hr {
+    margin: 4em auto;
+}
+
+#footer hr {
+    margin: 1em auto;
 }
 
 #content {
@@ -15,13 +41,76 @@
     padding-right: 30px;
 }
 
+#primary {
+    width: -webkit-fill-available;
+}
+
 #sidebar {
     padding-left: 20px;
     min-width: 20%;
 }
 
+a.btn {
+    border: 1px solid #ccc;
+    padding: .5rem 1rem;
+    margin: 0;
+    -webkit-border-radius: .25em;
+    -moz-border-radius: .25em;
+    border-radius: .25em;
+    text-decoration: none;
+    position: absolute;
+    right: 10px;
+}
+
+/* for mardown */
+
+#content tbody{display:table-row-group}
+#content tfoot{display:table-footer-group}
+#content table{margin-bottom:2em;font-size: 0.8em;padding:0;border-collapse:collapse;-webkit-box-shadow:1px 1px 2px rgba(0,0,0,.35);width:80%;margin:0 auto 2em auto}
+#content table th,table td{padding:10px 10px 9px;line-height:18px;text-align:left}
+#content table th{
+padding-top:9px;!important;text-transform:uppercase;vertical-align:middle}
+#content table td{vertical-align:top;border-top:1px solid #ddd;}
+#content table tbody th{border-top:1px solid #ddd;vertical-align:top}
+#content table{border:1px solid #ddd;/* border-collapse:separate; */*border-collapse:collapse;-webkit-border-radius:4px;-moz-border-radius:4px;border-radius:4px;}
+#content table th+th,table td+td,table th+td{border-left:1px solid #ddd}
+#content table thead tr:first-child th:first-child,table tbody tr:first-child td:first-child{-webkit-border-radius:4px 0 0 0;-moz-border-radius:4px 0 0 0;border-radius:4px 0 0 0}
+#content table thead tr:first-child th:last-child,table tbody tr:first-child td:last-child{-webkit-border-radius:0 4px 0 0;-moz-border-radius:0 4px 0 0;border-radius:0 4px 0 0}
+#content table tbody tr:last-child td:first-child{-webkit-border-radius:0 0 0 4px;-moz-border-radius:0 0 0 4px;border-radius:0 0 0 4px}
+#content table tbody tr:last-child td:last-child{-webkit-border-radius:0 0 4px 0;-moz-border-radius:0 0 4px 0;border-radius:0 0 4px 0}
+#content tbody tr:nth-child(odd){background-color:rgba(0,0,0,0.03)}
+
+a{text-decoration: none;}
+
+blockquote {
+    font-style: italic;
+}
+
+blockquote {
+    border-left: 2px solid #ccc;
+    margin: 0px 10px;
+    padding: 0px 10px;
+}
+
+input[type=checkbox]:before{ 
+    content:""; 
+    display:inline-block;
+    width:16px; 
+    height:16px;
+    background: white;
+    background-image: url(/blog/img/square.svg);
+    background-size: auto 100%;
+}
+input[type=checkbox]:checked:before{
+    background-image: url(/blog/img/check-square.svg);
+}
+
+li.nostyle {
+    list-style-type: none; 
+ }
+
 @media screen and (max-width: 1180px) {
-    #content {
+    #content, #header hr {
         max-width: 100%;
         padding-left: 20px;
         padding-right: 20px;
