--- a/blog/blog.css
+++ b/blog/blog.css
@@ -1,5 +1,8 @@
-body {
+body, pre code {
     font-family: Livvic;
+}
+
+body {
     color: rgb(17, 17, 17);
 }
 
@@ -21,16 +24,19 @@ body {
     height: 1px;
     border: 0;
     max-width: 1230px;
-    margin: 4em auto;
     text-align: center;
 }
 
 #header hr {
-    margin: 4em auto;
+    margin: 2em auto;
 }
 
 #footer hr {
     margin: 1em auto;
+}
+
+#footer th {
+    font-weight: unset;
 }
 
 #content {
@@ -101,14 +107,45 @@ input[type=checkbox]:before{
     background-image: url(/blog/img/square.svg);
     background-size: auto 100%;
 }
+
 input[type=checkbox]:checked:before{
     background-image: url(/blog/img/check-square.svg);
 }
 
 li.nostyle {
     list-style-type: none; 
- }
+}
 
+pre {
+    border-left: 2px solid #ccc;
+    margin: 10px;
+    padding: 0px 10px;
+}
+
+
+.warning {
+  border-left: 2px solid #FF9800 !important;
+}
+
+.warning code {
+  color: #FF9800 !important;
+}
+
+.note {
+   border-left: 2px solid #6AB0DE !important;
+}
+
+.note {
+   color: #6AB0DE !important;
+}
+
+.error {
+   border-left: 2px solid #F44336 !important;
+}
+
+.error {
+   color: #F44336 !important;
+}
 @media screen and (max-width: 1180px) {
     #content, #header hr {
         max-width: 100%;
