--- a/blog/blog.css
+++ b/blog/blog.css
@@ -19,6 +19,7 @@ body {
     width: 100%;
 }
 
+
 #header hr, #footer hr {
     background: #ccc;
     height: 1px;
@@ -39,12 +40,15 @@ body {
     font-weight: unset;
 }
 
-#content {
-    display: flex;
+#content, #editor {
     max-width: 1230px;
     margin: 0 auto;
     padding-left: 30px;
     padding-right: 30px;
+}
+
+#content {
+    display: flex;
 }
 
 #primary {
@@ -58,6 +62,7 @@ body {
 
 a.btn {
     border: 1px solid #ccc;
+    background: white;
     padding: .5rem 1rem;
     margin: 0;
     -webkit-border-radius: .25em;
@@ -66,6 +71,15 @@ a.btn {
     text-decoration: none;
     position: absolute;
     right: 10px;
+}
+
+a#edit-btn.btn {
+    position: fixed;
+    bottom: 10px;
+}
+
+.hidden {
+    display: none;
 }
 
 /* for mardown */
@@ -146,6 +160,58 @@ pre {
 .error {
    color: #F44336 !important;
 }
+
+/* toolbar */
+@font-face{
+    font-family:icomoon2;
+    src:url(font/icomoon2.woff) format('woff');
+    font-weight:400;
+    font-style:normal
+}
+
+.icon-floppy-disk, .icon-cross {
+    font-family: icomoon2;
+    speak: none;
+    font-style: normal;
+    font-weight: 400;
+    font-variant: normal;
+    text-transform: none;
+    line-height: 1;
+    -webkit-font-smoothing: antialiased;
+}
+
+.icon-floppy-disk:before {
+    content: "\e962";
+}
+
+.icon-cross:before {
+    content: "\ea0f";
+}
+
+.icon-space {
+    pointer-events: none;
+    cursor: default;
+    text-decoration: none;
+    color: black;
+}
+
+/* manage mode and action */
+body[mode=view] #logout-btn,
+body[mode=view] #edit-btn,
+body[mode=edit] #login-btn,
+body:not([mode=edit]) #edit-btn,
+body[mode=edit][action=edit] #edit-btn,
+body[mode=view][action=edit] #content,
+body:not([action=edit]) #editor,
+body[action=edit] #footer,
+body[action=edit] hr,
+body[action=edit] #header,
+body[action=edit] #logout-btn
+{
+    display: none;
+}
+
+/* manage responsive */
 @media screen and (max-width: 1180px) {
     #content, #header hr {
         max-width: 100%;
