--- a/blog/blog.css
+++ b/blog/blog.css
@@ -169,7 +169,7 @@ pre {
     font-style:normal
 }
 
-.icon-floppy-disk, .icon-cross {
+.icon-floppy-disk, .icon-cross, .icon-menu {
     font-family: icomoon2;
     speak: none;
     font-style: normal;
@@ -182,6 +182,10 @@ pre {
 
 .icon-floppy-disk:before {
     content: "\e962";
+}
+
+.icon-menu:before {
+    content: "\e9bd";
 }
 
 .icon-cross:before {
@@ -206,11 +210,16 @@ body:not([action=edit]) #editor,
 body[action=edit] #footer,
 body[action=edit] hr,
 body[action=edit] #header,
-body[action=edit] #logout-btn
+body[action=edit] #logout-btn,
+#menu-btn
 {
     display: none;
 }
 
+body[action=menu] #primary {
+        display: none;
+}
+ 
 /* manage responsive */
 @media screen and (max-width: 1180px) {
     #content, #header hr {
@@ -221,7 +230,12 @@ body[action=edit] #logout-btn
 }
 
 @media screen and (max-width: 600px) {
-    #sidebar {
+    body:not([action=menu]) #sidebar {
         display: none;
+    }
+    #menu-btn {
+        display: unset;
+        right: unset;
+        left: 10px;
     }
 }
