--- a/blog/blog.css
+++ b/blog/blog.css
@@ -82,6 +82,12 @@ a#edit-btn.btn {
     display: none;
 }
 
+.date {
+    color: grey;
+    font-size: small;
+    font-style: italic;
+}
+
 /* for mardown */
 
 #content tbody{display:table-row-group}
@@ -99,6 +105,10 @@ padding-top:9px;!important;text-transform:uppercase;vertical-align:middle}
 #content table tbody tr:last-child td:first-child{-webkit-border-radius:0 0 0 4px;-moz-border-radius:0 0 0 4px;border-radius:0 0 0 4px}
 #content table tbody tr:last-child td:last-child{-webkit-border-radius:0 0 4px 0;-moz-border-radius:0 0 4px 0;border-radius:0 0 4px 0}
 #content tbody tr:nth-child(odd){background-color:rgba(0,0,0,0.03)}
+
+#content h1 {
+    margin: 0px;
+}
 
 a{text-decoration: none;}
 
@@ -181,7 +191,7 @@ a.title, .btn, #personnal-shortcut a, #admin a {
     font-style:normal
 }
 
-.icon-floppy-disk, .icon-cross, .icon-menu, .icon-download {
+.icon-floppy-disk, .icon-cross, .icon-menu, .icon-download, .icon-search {
     font-family: icomoon2;
     speak: none;
     font-style: normal;
@@ -215,6 +225,31 @@ a.title, .btn, #personnal-shortcut a, #admin a {
     color: black;
 }
 
+input#searchText {
+    font-family: Livvic;
+    font-size: 16px;
+    text-align: center;
+    border: none;
+    width: calc(100% - 20px);
+}
+input, input:focus, input:-webkit-autofill {
+    outline: none;
+    background-color: white !important;
+    -webkit-box-shadow: 0 0 0 1000px white inset !important;
+}
+
+.wrapper input[type="text"] {
+    position: relative; 
+}
+
+.icon-search:before {
+    font-family: 'icomoon2';
+    position: relative;
+    left: -5px;
+    content: "\e986";
+}
+
+
 /* manage mode and action */
 body[mode=view] #logout-btn,
 body[mode=view] #edit-btn,
@@ -228,14 +263,21 @@ body[action=edit] hr,
 body[action=edit] #header,
 body[action=edit] #logout-btn,
 #menu-btn,
-body:not([mode=edit]) #admin
+body:not([mode=edit]) #admin,
+body[mode=edit][action=edit] #menu-btn
 {
     display: none;
 }
 
 body[action=menu] #primary {
-        display: none;
+    display: none;
 }
+body[action=menu] #sidebar {
+    width: 100%;
+}
+
+
+
  
 /* manage responsive */
 @media screen and (max-width: 1180px) {
