--- a/blog/blog.css
+++ b/blog/blog.css
@@ -183,6 +183,10 @@ a.title, .btn, #personnal-shortcut a, #admin a {
     color: rgb(17, 17, 17);
 }
 
+.note .hljs-symbol, .note .hljs-comment, .error .hljs-symbol, .error .hljs-comment, .warning .hljs-symbol, .warning .hljs-comment {
+    color: unset;
+}
+
 /* toolbar */
 @font-face{
     font-family:icomoon2;
