<fix> web: manage admonition number

--- a/blog/blog.css
+++ b/blog/blog.css
@@ -184,24 +184,28 @@ a.title, .btn, #personnal-shortcut a, #admin a {
 }
 
 .info .hljs-symbol,
+.info .hljs-number,
 .info .hljs-comment,
 .info .hljs-selector-tag,
 .info .hljs-selector-class,
 .info .hljs-tag,
 .info .hljs-name,
 .note .hljs-symbol,
+.note .hljs-number,
 .note .hljs-comment,
 .note .hljs-selector-tag,
 .note .hljs-selector-class,
 .note .hljs-tag,
 .note .hljs-name,
 .error .hljs-symbol,
+.error .hljs-number,
 .error .hljs-comment,
 .error .hljs-selector-tag,
 .error .hljs-selector-class,
 .error .hljs-tag,
 .error .hljs-name,
 .warning .hljs-symbol,
+.warning .hljs-number,
 .warning .hljs-comment,
 .warning .hljs-selector-tag,
 .warning .hljs-selector-class,
