<fix> web: manage admonition string attr

--- a/blog/blog.css
+++ b/blog/blog.css
@@ -185,6 +185,8 @@ a.title, .btn, #personnal-shortcut a, #admin a {
 
 .info .hljs-symbol,
 .info .hljs-number,
+.info .hljs-string,
+.info .hljs-attr,
 .info .hljs-comment,
 .info .hljs-selector-tag,
 .info .hljs-selector-class,
@@ -192,6 +194,8 @@ a.title, .btn, #personnal-shortcut a, #admin a {
 .info .hljs-name,
 .note .hljs-symbol,
 .note .hljs-number,
+.note .hljs-attr,
+.note .hljs-string,
 .note .hljs-comment,
 .note .hljs-selector-tag,
 .note .hljs-selector-class,
@@ -199,6 +203,8 @@ a.title, .btn, #personnal-shortcut a, #admin a {
 .note .hljs-name,
 .error .hljs-symbol,
 .error .hljs-number,
+.error .hljs-attr,
+.error .hljs-string,
 .error .hljs-comment,
 .error .hljs-selector-tag,
 .error .hljs-selector-class,
@@ -206,6 +212,8 @@ a.title, .btn, #personnal-shortcut a, #admin a {
 .error .hljs-name,
 .warning .hljs-symbol,
 .warning .hljs-number,
+.warning .hljs-attr,
+.warning .hljs-string,
 .warning .hljs-comment,
 .warning .hljs-selector-tag,
 .warning .hljs-selector-class,
