--- a/blog/blog.css
+++ b/blog/blog.css
@@ -18,7 +18,9 @@ body {
 #header table, #footer table {
     width: 100%;
 }
-
+#content {
+    max-width: 1100px;
+}
 
 #header hr, #footer hr {
     background: #ccc;
