--- a/blog/blog.css
+++ b/blog/blog.css
@@ -141,12 +141,19 @@ input[type=checkbox]:checked:before{
 li.nostyle {
     list-style-type: none; 
 }
-
+/*
 pre:not(> .language-graphviz) {
     border-left: 2px solid #ccc;
     margin: 10px;
     padding: 0px 10px;
 }
+*/
+pre {
+    border-left: 2px solid #ccc;
+    margin: 10px;
+    padding: 0px 10px;
+}
+
 
 
 .warning {
