<feat> version only read

--- a/blog/blog.css
+++ b/blog/blog.css
@@ -249,7 +249,7 @@ a.title, .btn, #personnal-shortcut a, #admin a {
     font-style:normal
 }
 
-.icon-floppy-disk, .icon-cross, .icon-menu, .icon-download, .icon-search, .icon-cloud-upload, .icon-switch, .icon-pencil, .icon-file-text {
+.icon-search {
     font-family: icomoon2;
     speak: none;
     font-style: normal;
@@ -260,47 +260,7 @@ a.title, .btn, #personnal-shortcut a, #admin a {
     -webkit-font-smoothing: antialiased;
 }
 
-.icon-floppy-disk:before {
-    content: "\e962";
-}
-
-.icon-menu:before {
-    content: "\e9bd";
-}
-
-.icon-switch:before {
-    content: "\e9b6";
-}
-
-.icon-pencil:before {
-    content: "\e905";
-}
-
-.icon-file-text:before {
-    content: "\e922";
-}
-
-.icon-download:before {
-    content: "\e960";
-}
-
-.icon-cloud-upload:before {
-    content: "\e9c3";
-}
-
-
-.icon-cross:before {
-    content: "\ea0f";
-}
-
-.icon-space {
-    pointer-events: none;
-    cursor: default;
-    text-decoration: none;
-    color: black;
-}
-
-input#searchText, input#userText, input#passwordText {
+input#searchText {
     font-family: Livvic;
     font-size: 16px;
     text-align: left;
@@ -316,10 +276,6 @@ input, input:focus, input:-webkit-autofill {
     -webkit-box-shadow: 0 0 0 1000px white inset !important;
 }
 
-#form-login {
-    width: 300px;
-    margin: auto;
-}
 
 .space {
     height: 20px;
@@ -336,56 +292,6 @@ input, input:focus, input:-webkit-autofill {
     content: "\e986";
 }
 
-.icon-user:before {
-    font-family: 'icomoon2';
-    position: relative;
-    left: -5px;
-    content: "\e971";
-}
-
-
-.icon-password:before {
-    font-family: 'icomoon2';
-    position: relative;
-    left: -5px;
-    content: "\e98d";
-}
-
-
-
-/* manage mode and action */
-body[mode=view] #logout-btn,
-body[mode=view] #edit-btn,
-body[mode=edit] #login-btn,
-body:not([mode=edit]) #edit-btn,
-body[mode=edit][action=edit] #edit-btn,
-body[mode=view][action=edit] #content,
-body:not([action=edit]) #editor,
-body[action=edit] #footer,
-body[action=edit] #sidebar,
-body[action=edit] hr,
-body[action=edit] #header,
-body[action=edit] #logout-btn,
-#menu-btn,
-body:not([mode=edit]) #admin,
-body[mode=edit][action=edit] #menu-btn,
-body[action=login] #content,
-body[action=login] #logout-btn,
-body[action=login] #login-btn,
-body[action=login] #edit-btn
-{
-    display: none;
-}
-
-body[action=menu] #primary {
-    display: none;
-}
-body[action=menu] #sidebar {
-    width: 100%;
-}
-body:not([action=login]) #login {
-    display: none;
-}
 
 
 #content img, #content svg {
